Prompts save tokens by sending the URL instead of the full body.